workshop03/appv1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appv1-svc
spec:
  selector:
    name: myapp
    version: v1
  type: ClusterIP
  ports:
    - name: myappv1-port
      port: 80
      targetPort: 3000
