workshop03/appv2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appv2-svc
spec:
  selector:
    name: myapp
    version: v2
  type: ClusterIP
  ports:
    - name: myappv2-port
      port: 80
      targetPort: 3000
